# MatVecNew

./: .gitignore  .gitmodules  BuildScipt.bat  BuildScript.bat  BuildScript.sh  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  example.cpp
include/Bindings/: Bindings.h  Common.hpp
include/Constants/: Common Defs.h
include/MatVecCore/: MatVecClassDeclaration.h  NumPyInteractions.h
include/core/: MatVecCore.hpp
include/defs/: Macros.hpp
src/: temp.cu
src/Bindings/: Core Bindings.cpp  Main Bindings.cpp  MatVecBindings.cpp  MatVecClass.cpp  example.cpp
src/Class Defs/: MatVec_Creation_Print.cu  Temp.cu
src/Class Defs/Creation Routines/: MatVec Constructors.cu
src/Class Defs/Numpy Interactions/: Conversion.cu
src/Common/: Conversion.cu  MatVec Constructors.cu  PrintOuts.cu
src/core/: MatVecConstructors.cu
tests/: Test_Driver.py  creation_test.py
